examples/type_system/failing/150_cross_module_constructor_access_nonstrict_warning.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// W201 (non-strict): cross-module constructor access emits warning and continues.

import TypeSystem.BoundaryCtor

fn main() {
    let _x = TypeSystem.BoundaryCtor.SomeInt(1)
}
